# calhacks

./: .gitignore
pdf-project/: contextagent.py  data_models.py  groq_chat_service.py  main.py  pdf_filler.py  pyproject.toml
pdf-project-frontend/: package-lock.json  package.json
pdf-project-frontend/src/: App.tsx  handlers.tsx
